# rust-dilithium2

./: .gitignore  Cargo.toml  Readme.md  build.rs
depend/dilithium2/: Makefile  sign.c
depends/dilithium2/: Makefile  sign.h
depends/dilithium2/test/: test_dilithium.c  test_dilithium2
src/: lib.rs  main.rs  sign.rs  tests.rs
src/libsign/: mod.rs  sign.rs
src/libsign/utils/: config.rs  error.rs  ffi.rs  mod.rs
src/utils/: config.rs  error.rs  ffi.rs  mod.rs
