[package]
name = "rust-dilithium2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
libloading = "0.8.0"

[build-dependencies]
cc = { version = "1.0"}
bindgen = "0.65.1"

[[bin]]
name = "example"
test = false
bench = false